--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-masonry-css": "^1.0.14",
+    "react-virtualized": "^9.22.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
     "unsplash-js": "^7.0.2",
